service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthapp-service
spec:
  selector:
    app: healthapp
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
